--- a/AudEnglishFree/bin/AndroidManifest.xml
+++ b/AudEnglishFree/bin/AndroidManifest.xml
@@ -1,17 +1,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dangle1107.audenglishfree"
-    android:versionCode="1"
-    android:versionName="1.0" >
-
+    android:versionCode="2"
+    android:versionName="1.1" >
+	<uses-permission android:name="android.permission.INTERNET" />
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="19" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <meta-data android:name="com.google.android.gms.version"
+        	android:value="@integer/google_play_services_version" />
         <activity
             android:name="com.dangle1107.audenglishfree.PlayerActivity"
             android:label="@string/app_name" >
@@ -21,8 +23,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-         <activity
+        <activity
             android:name=".PlayListActivity" />
+        <activity android:name="com.google.android.gms.ads.AdActivity"
+             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
     </application>
 
 </manifest>
